/*
 * $Id: ChangeLog,v 1.5216 2006/10/18 16:39:48 ptsarenko Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-10-20 08:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/rtl/fstemp.c
    ! minor bug fixed on FHANDLE HB_EXPORT hb_fsCreateTemp() function
      That was producing some errors on dbfcdx,since the last char of the filename generated
      has an trash
  * source/cgi/tframe.prg
    ! minor fix

2006-10-18 20:00 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  * source/ct/bit1.c
    * added support for 32-bit numbers in NumAnd(), NumOr() and NumXor() for
      clipper compatibility. In fact the behavior of these functions is
      different from NG documentation
  + tests/cttest/bit1.prg
    + added tests for ct bit functions
  * tests/cttest/Makefile
    * changed for bit1.prg

2006-10-18 10:19 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
   *include/hbrddbmcdx.h
    + Synchronous LogKeyCount for APPEND, DELETE, RECALL and PUTREC.
    + The filter with its DBF is had synchronous when third they cause
      that the registry leaves filter.

2006-10-17 00:35 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/ct/dattime2.c
    * casts on xGrab calls.

2006-10-16 10:35 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
    ! Fixed a typo.

2006-10-15 23:27 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/dbcmd.c
    - reverted to original value:  pFilterInfo.fOptimized = FALSE;

2006-10-15 23:16 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
  * source/debug/dbgbrwsr.prg
    ! Correctly reposition windows after hiding the monitor window.
  * source/debug/dbghelp.prg
    ! Fixed a typo.